--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                 <div class="traffic_patrol-slide-6">
                     <div class="traffic_patrol_slider-wrapper swiper">
                         <div class="traffic_patrol_slider swiper-wrapper">
-                            <div class="traffic_patrol-card slid swiper-slide">
+                            <div class="garage_model_card swiper-slide">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
@@ -102,7 +102,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="traffic_patrol-card slid swiper-slide">
+                            <div class="garage_model_card swiper-slide">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
@@ -121,64 +121,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="traffic_patrol-card slid swiper-slide">
-                                <div class="slid_img"></div>
-                                <div class="slid_info">
-                                    <div class="slid_info-desc">
-                                        <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
-                                    </div>
-                                    <div class="slid_info-link">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                            <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                                <rect width="18" height="18" fill="#D9D9D9"/>
-                                            </mask>
-                                            <g mask="url(#mask0_1137_313)">
-                                                <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                            </g>
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="traffic_patrol-card slid swiper-slide">
-                                <div class="slid_img"></div>
-                                <div class="slid_info">
-                                    <div class="slid_info-desc">
-                                        <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
-                                    </div>
-                                    <div class="slid_info-link">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                            <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                                <rect width="18" height="18" fill="#D9D9D9"/>
-                                            </mask>
-                                            <g mask="url(#mask0_1137_313)">
-                                                <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                            </g>
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="traffic_patrol-card slid swiper-slide">
-                                <div class="slid_img"></div>
-                                <div class="slid_info">
-                                    <div class="slid_info-desc">
-                                        <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
-                                    </div>
-                                    <div class="slid_info-link">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                            <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                                <rect width="18" height="18" fill="#D9D9D9"/>
-                                            </mask>
-                                            <g mask="url(#mask0_1137_313)">
-                                                <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                            </g>
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="traffic_patrol-card slid swiper-slide">
+                            <div class="garage_model_card swiper-slide">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
@@ -214,7 +157,7 @@
                 <div class="traffic_patrol-no-slide-7">
                     <div class="traffic_patrol_slider-wrapper">
                         <div class="traffic_patrol_slider">
-                            <div class="traffic_patrol-card slid">
+                            <div class="garage_model_card">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
@@ -274,7 +217,7 @@
                     <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" class="employ">
                 </div>
                 <div class="slider-5">
-                    <div class="traffic_patrol-card slid">
+                    <div class="garage_model_card">
                         <div class="slid_img"></div>
                         <div class="slid_info">
                             <div class="slid_info-desc">
@@ -307,7 +250,7 @@
                 <div class="employ_plus_bus_slider">
                     <div class="situation_centre_slider-wrapper swiper2">
                         <div class="situation_centre_slider swiper-wrapper">
-                            <div class="situation_centre-card slid swiper-slide">
+                            <div class="situation_centre-card swiper-slide">
                                 <div class="slid_img">
                                     <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" class="employ">
                                 </div>
@@ -317,7 +260,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="situation_centre-card slid swiper-slide">
+                            <div class="situation_centre-card swiper-slide">
                                 <div class="slid_img">
                                     <img src="./img/layout/pages/main/bus.jpg" alt="Ситуационный центр" class="bus">
                                 </div>
@@ -491,7 +434,7 @@
                     <p class="mobile_text_combo-text">Каждый экипаж оборудован всем необходимым для помощи:</p>
                 </div>
                 <div class="slide-5">
-                    <div class="traffic_patrol-card slid">
+                    <div class="garage_model_card">
                         <div class="slid_img"></div>
                         <div class="slid_info">
                             <div class="slid_info-desc">
@@ -512,7 +455,7 @@
                     </div>
                 </div>
                 <div class="slide-6">
-                    <div class="traffic_patrol-card slid">
+                    <div class="garage_model_card">
                         <div class="slid_img"></div>
                         <div class="slid_info">
                             <div class="slid_info-desc">
@@ -535,7 +478,7 @@
                 <div class="equipment_mobile-slide">
                     <div class="traffic_patrol_slider-wrapper swiper3">
                         <div class="traffic_patrol_slider swiper-wrapper">
-                            <div class="traffic_patrol-card slid swiper-slide">
+                            <div class="garage_model_card swiper-slide">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
@@ -554,7 +497,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="traffic_patrol-card slid swiper-slide">
+                            <div class="garage_model_card swiper-slide">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
@@ -573,64 +516,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="traffic_patrol-card slid swiper-slide">
-                                <div class="slid_img"></div>
-                                <div class="slid_info">
-                                    <div class="slid_info-desc">
-                                        <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
-                                    </div>
-                                    <div class="slid_info-link">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                            <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                                <rect width="18" height="18" fill="#D9D9D9"/>
-                                            </mask>
-                                            <g mask="url(#mask0_1137_313)">
-                                                <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                            </g>
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="traffic_patrol-card slid swiper-slide">
-                                <div class="slid_img"></div>
-                                <div class="slid_info">
-                                    <div class="slid_info-desc">
-                                        <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
-                                    </div>
-                                    <div class="slid_info-link">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                            <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                                <rect width="18" height="18" fill="#D9D9D9"/>
-                                            </mask>
-                                            <g mask="url(#mask0_1137_313)">
-                                                <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                            </g>
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="traffic_patrol-card slid swiper-slide">
-                                <div class="slid_img"></div>
-                                <div class="slid_info">
-                                    <div class="slid_info-desc">
-                                        <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
-                                    </div>
-                                    <div class="slid_info-link">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                            <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                                <rect width="18" height="18" fill="#D9D9D9"/>
-                                            </mask>
-                                            <g mask="url(#mask0_1137_313)">
-                                                <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                            </g>
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="traffic_patrol-card slid swiper-slide">
+                            <div class="garage_model_card swiper-slide">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
@@ -668,47 +554,43 @@
                     </div>
                 </div>
                 <div class="footer-menu-2">
-                    <div class="text_wrapper">
-                        <p class="footer-menu-title">Транспорт</p>
-                    </div>
-                    <div class="footer-menu-links">
-                        <a href="#" class="footer-menu-link">Дорожный патруль</a>
-                        <a href="#" class="footer-menu-link">Мобильный ситуационный центр</a>
-                        <a href="#" class="footer-menu-link">Водный патруль</a>
-                        <a href="#" class="footer-menu-link">Велопатруль</a>
-                        <a href="#" class="footer-menu-link">Служба помощи</a>
+                    <div class="footer-menu-wrapper">
+                        <div class="text_wrapper">
+                            <p class="footer-menu-title">Транспорт</p>
+                        </div>
+                        <div class="footer-menu-links">
+                            <a href="#" class="footer-menu-link">Дорожный патруль</a>
+                            <a href="#" class="footer-menu-link">Мобильный ситуационный центр</a>
+                            <a href="#" class="footer-menu-link">Водный патруль</a>
+                            <a href="#" class="footer-menu-link">Велопатруль</a>
+                            <a href="#" class="footer-menu-link">Служба помощи</a>
+                        </div>
                     </div>
                 </div>
                 <div class="footer-contacts-3">
-                    <div class="contacts-1">
+                    <a class="contacts-1" href="#">
                         <img src="./img/layout/pages/main/footer/contact_internet.svg" alt="ЦОДД" class="contact-img">
-                        <a href="#" class="contact-link">Сайт ЦОДД</a>
-                    </div>
-                    <div class="contacts-2">
+                        <p class="contact-link">Сайт ЦОДД</p>
+                    </a>
+                    <a class="contacts-2" href="#">
                         <img src="./img/layout/pages/main/footer/media_tel.svg" alt="Телефон" class="contact-img">
-                        <a href="#" class="contact-link">+7 (495) 539-54-54</a>
-                    </div>
-                    <div class="contacts-3">
+                        <p class="contact-link">+7 (495) 539-54-54</p>
+                    </a>
+                    <a class="contacts-3" href="#">
                         <img src="./img/layout/pages/main/footer/contact_mail.svg" alt="Почта" class="contact-img">
-                        <a href="#" class="contact-link">codd@transport.mos.ru</a>
-                    </div>
+                        <p class="contact-link">codd@transport.mos.ru</p>
+                    </a>
                 </div>
                 <div class="footer-media-4">
-                    <div class="media-wrapper">
-                        <a href="#" class="media_img-link">
-                            <img src="./img/layout/pages/main/footer/media_vk.svg" alt="vk">
-                        </a>
-                    </div>
-                    <div class="media-wrapper">
-                        <a href="#" class="media_img-link">
-                            <img src="./img/layout/pages/main/footer/media_telegram.svg" alt="telegram">
-                        </a>
-                    </div>
-                    <div class="media-wrapper">
-                        <a href="#" class="media_img-link">
-                            <img src="./img/layout/pages/main/footer/media_tel.svg" alt="Телефон">
-                        </a>
-                    </div>
+                    <a class="media-wrapper" href="#">
+                        <img src="./img/layout/pages/main/footer/media_vk.svg" alt="vk">
+                    </a>
+                    <a class="media-wrapper" href="#">
+                        <img src="./img/layout/pages/main/footer/media_telegram.svg" alt="telegram">
+                    </a>
+                    <a class="media-wrapper" href="#">
+                        <img src="./img/layout/pages/main/footer/media_tel.svg" alt="Телефон">
+                    </a>
                 </div>
             </div>
         </div>
