--- a/src/index.html
+++ b/src/index.html
@@ -83,12 +83,12 @@
                 <div class="traffic_patrol-slide-6">
                     <div class="traffic_patrol_slider-wrapper swiper">
                         <div class="traffic_patrol_slider swiper-wrapper">
-                            <div class="garage_model_card swiper-slide">
+                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
                                         <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                                        <p class="slid_info-text">Патрульный пикап</p>
                                     </div>
                                     <div class="slid_info-link">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -101,13 +101,13 @@
                                         </svg>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="garage_model_card swiper-slide">
+                            </a>
+                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
                                         <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                                        <p class="slid_info-text">Патрульный пикап</p>
                                     </div>
                                     <div class="slid_info-link">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -120,13 +120,13 @@
                                         </svg>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="garage_model_card swiper-slide">
+                            </a>
+                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
                                         <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                                        <p class="slid_info-text">Патрульный пикап</p>
                                     </div>
                                     <div class="slid_info-link">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -139,7 +139,7 @@
                                         </svg>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="swiper-pagination"></div>
                     </div>
@@ -157,12 +157,12 @@
                 <div class="traffic_patrol-no-slide-7">
                     <div class="traffic_patrol_slider-wrapper">
                         <div class="traffic_patrol_slider">
-                            <div class="garage_model_card">
+                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
                                         <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                                        <p class="slid_info-text">Патрульный пикап</p>
                                     </div>
                                     <div class="slid_info-link">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -175,7 +175,7 @@
                                         </svg>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -217,12 +217,12 @@
                     <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" class="employ">
                 </div>
                 <div class="slider-5">
-                    <div class="garage_model_card">
+                    <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                         <div class="slid_img"></div>
                         <div class="slid_info">
                             <div class="slid_info-desc">
                                 <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                                <p class="slid_info-text">Патрульный пикап</p>
                             </div>
                             <div class="slid_info-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -235,7 +235,7 @@
                                 </svg>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="bus-6">
                     <img src="./img/layout/pages/main/bus.jpg" alt="Ситуационный центр" class="bus">
@@ -434,12 +434,12 @@
                     <p class="mobile_text_combo-text">Каждый экипаж оборудован всем необходимым для помощи:</p>
                 </div>
                 <div class="slide-5">
-                    <div class="garage_model_card">
+                    <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                         <div class="slid_img"></div>
                         <div class="slid_info">
                             <div class="slid_info-desc">
                                 <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                                <p class="slid_info-text">Патрульный пикап</p>
                             </div>
                             <div class="slid_info-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -452,15 +452,15 @@
                                 </svg>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="slide-6">
-                    <div class="garage_model_card">
+                    <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                         <div class="slid_img"></div>
                         <div class="slid_info">
                             <div class="slid_info-desc">
                                 <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                                <p class="slid_info-text">Патрульный пикап</p>
                             </div>
                             <div class="slid_info-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -473,17 +473,17 @@
                                 </svg>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="equipment_mobile-slide">
                     <div class="traffic_patrol_slider-wrapper swiper3">
                         <div class="traffic_patrol_slider swiper-wrapper">
-                            <div class="garage_model_card swiper-slide">
+                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
                                         <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                                        <p class="slid_info-text">Патрульный пикап</p>
                                     </div>
                                     <div class="slid_info-link">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -496,13 +496,13 @@
                                         </svg>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="garage_model_card swiper-slide">
+                            </a>
+                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
                                         <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                                        <p class="slid_info-text">Патрульный пикап</p>
                                     </div>
                                     <div class="slid_info-link">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -515,13 +515,13 @@
                                         </svg>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="garage_model_card swiper-slide">
+                            </a>
+                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                                 <div class="slid_img"></div>
                                 <div class="slid_info">
                                     <div class="slid_info-desc">
                                         <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                        <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                                        <p class="slid_info-text">Патрульный пикап</p>
                                     </div>
                                     <div class="slid_info-link">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -534,7 +534,7 @@
                                         </svg>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="swiper-pagination3"></div>
                     </div>
