--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -231,7 +231,6 @@
                 <div class="tech_spec__button">
                     <a class="tech_spec__btn">
                         <span>Подробнее</span>
-<!--                        <span>Скрыть</span>-->
                         <img src="../img/layout/icon-arrow.svg" alt="icon-arrow" fetchpriority="high">
                     </a>
                 </div>
@@ -265,64 +264,50 @@
                         <div class="gallery_item active swiper-slide">
                             <a class="gallery_item_link" href="#">
                                 <picture>
-<!--                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" fetchpriority="high">
                                 </picture>
-                                <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="ford.html">
                                 <picture>
-<!--                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" fetchpriority="high">
                                 </picture>
-                                <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" loading="lazy" decoding="async">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="bus.html">
                                 <picture>
-                                    <!--                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" fetchpriority="high">
                                 </picture>
-                                <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="kater.html">
                                 <picture>
-<!--                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" fetchpriority="high">
                                 </picture>
-                                <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="velo.html">
                                 <picture>
-                                    <!--                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" fetchpriority="high">
                                 </picture>
-                                <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="moskvich.html">
                                 <picture>
-                                    <!--                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" fetchpriority="high">
                                 </picture>
-                                <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="solaris_two.html">
                                 <picture>
-<!--                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
                                 </picture>
-                                <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">-->
                             </a>
                         </div>
                     </div>
@@ -515,8 +500,8 @@
     const IframeObject = {
         AR_ON: 'https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU',
         AR_OFF: 'https://www.vectary.com/p/1N0rB9dLMcEG5uH9Q7G7dL',
-        // MOBILE_AR_ON: 'https://www.vectary.com/p/0GvsPRo0LNzL2q0uOZhFYD',
-        MOBILE_AR_ON: 'https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU',
+        MOBILE_AR_ON: 'https://www.vectary.com/p/0GvsPRo0LNzL2q0uOZhFYD',
+        // MOBILE_AR_ON: 'https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU',
         XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/cd8172d4-e177-4eba-a7cc-8ef64e6b64f9/cd8172d4-e177-4eba-a7cc-8ef64e6b64f9',
         XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/1bbd3e75-b6c7-49d3-9f62-ab09edf1150a/1bbd3e75-b6c7-49d3-9f62-ab09edf1150a',
         XHR_MOBILE_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/b8f75d2e-2c46-476f-8b9e-379064f997f1/b8f75d2e-2c46-476f-8b9e-379064f997f1'
